[package]
name = "memory-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
crosscurses = "0.1.0"
env_logger = "0.10.0"
get_sys_info = "0.1.21"
log = "0.4.18"
ncurses-rs = "0.0.3"
